@@ -6,5 +6,6 @@
 #cmakedefine CMAKE_INSTALL_FULL_DATAROOTDIR "@CMAKE_INSTALL_FULL_DATAROOTDIR@"
 #cmakedefine UDT_GUI_PATH "@UDT_GUI_PATH@"
 #cmakedefine UDT_CONFIG_DEFAULT_PATH "@UDT_CONFIG_DEFAULT_PATH@"
+#cmakedefine UDT_NO_ROUTE_IS_ERROR
 
 #endif /* @PROJECT_NAME@_CONFIG_H */
